# ycloud-console-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  release.yml
docs/: releasing.md
npm/console-cli/: LICENSE  package.json
npm/console-cli/lib/: platform.js
npm/console-cli/test/: platform.test.js
scripts/: check-release.mjs  generate-release-checksums.mjs  generate-release-checksums.test.mjs  render-homebrew-formula.mjs  render-homebrew-formula.test.mjs  stage-npm-packages.mjs
src/: auth.rs  cli.rs  config.rs  export.rs  http.rs  lib.rs  main.rs  permissions.rs  pkce.rs  waba_assignment.rs
tests/: auth_flow.rs  export_flow.rs
