[package]
name = "ycloud-console-cli"
version = "0.1.2"
edition = "2021"
description = "Console-oriented YCloud CLI using browser grant auth"
license = "MIT"
homepage = "https://www.ycloud.com"

[[bin]]
name = "ycloud"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
url = "2"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
